TEST_PROGRAMS/INVALID/05/loop_with_robillard_braces.go
/* Loop with Robillard-style braces.  */

package main;

func main() {
	var sum int = 0

	for i := 0; i < 10; i++
	{
		sum += 1
	}
}
